src/test/deca/context/invalid/declare-null.deca
// Description:
//    Assign null a une variable 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 12: An assignation between a int and a null is not possible (rule 3.32)
//
// Historique:
//    cree le 16/01/2023

{
    int a = null;
}
